# Libx265Encode

app/: build.gradle
app/src/androidTest/java/com/example/libx265encode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/java/com/example/libx265encode/: H265Encode.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/libx265encode/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
